[project]
name = "desk3-service"
version = "0.1.0"
description = "Desk3 MCP Server"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
 "mcp>=1.12.0",
 "python-dotenv>=1.0.1",
 "requests>=2.32.3",
 "ruff>=0.8.1",
 "fastapi>=0.110.0",
 "httpx>=0.28.0",
 "pytest>=8.0.0",
]
[[project.authors]]
name = "desk3"
email = "dev@desk3.io"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[project.scripts]
desk3_service = "desk3_service:main"
